k8s/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: proxy-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: feed-api
          servicePort: 8080
        path: /feed-api(/|$)(.*)
      - backend:
          serviceName: users-api 
          servicePort: 8080
        path: /users-api(/|$)(.*)
      - backend:
          serviceName: videos-api
          servicePort: 8080
        path: /videos-api(.*)
